<resources>
    <string name="app_name">云城建</string>
    <string name="radioGroup_text">定位icon</string>
    <string name="radioGroup_report">上报</string>
    <string name="takephoto">拍照上传 |</string>
    <string name="navigation">去这里</string>
    <string name="report_yes">上报上级</string>
    <string name="report_no">不上报</string>
    <string name="nomal_map">普通地图</string>
    <string name="other_map">卫星地图</string>
    <string name="head_map">罗盘地图</string>
    <string name="report_msg">上报信息</string>
    <string name="show_msg">查看详情</string>
    <string name="title">光明边坡</string>
    <string name="setting">网络设置</string>
    <string name="openloaction">上报定位</string>
    <string name="guide">使用指南</string>
    <string name="register">签到打卡</string>
    <string name="feedback">问题反馈</string>
    <string name="userinfo">个人中心</string>
    <string name="enter">确定</string>
    <string name="cancle">取消</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <!--<string name="type_slope">边坡</string>-->
    <!--<string name="type_weater">三防</string>-->
    <!--<string name="type_worker">巡查员</string>-->
    <!--<string name="type_house">危房</string>-->
    <!--<string name="type_dx">地陷</string>-->
    <!--<string name="type_gd">工地</string>-->
    <!--<string name="type_hd">河道</string>-->


    <string name="type_data">监测数据</string>
    <string name="type_video">监测视频</string>
    <string name="type_process">治理进度</string>
    <string name="type_his">巡查报告</string>
    <string name="type_addimg">替换图片</string>
    <string name="type_report">上报数据</string>
    <string name="type_hisdetil">巡查详情</string>
    <string name="type_danager">监测预警</string>
    <string name="net_set">网络设置</string>
    <string name="p_set">权限设置</string>

    <string name="p_cam">相机权限</string>
    <string name="p_sound">录音权限</string>
    <string name="p_flash">存储权限</string>
    <string name="p_loca">定位权限</string>
    <string name="p_net">网络权限</string>
    <string name="p_GPS">GPS权限</string>
    <string name="title_p">个人信息</string>
    <string name="hint_tip">请录入信息</string>
    <string name="process_tip">输入进度或拖动进度条调整进度</string>
    <string name="report">巡查报告</string>
    <string name="reportmsg">巡查信息</string>
    <string name="quickCkeck">已核</string>
    <string name="gread1">小</string>
    <string name="gread2">中</string>
    <string name="gread3">大</string>
    <string name="empty_text">这里空空的</string>
    <string name="empty_tip">暂无数据</string>
    <string name="sensorWarning">监测预警</string>
    <string name="sensorWarning2">监测预报</string>
    <string name="full_text">已全部加载完了！！！</string>
    <string name="refresh_text">刷新成功！</string>
    <string name="network_error">网络不可用</string>
    <string name="reportTip">(上传图片视频1-4张，点击图片预览播放，长按取消该图片,由于图片水印，请完善信息再拍照)</string>
    <string name="changeTip">(上传图片1-4张，点击图片预览播放,只支持图片信息)</string>
    <string name="guanli">管&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;理：</string>
    <string name="lingdao">领&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;导：</string>
    <string name="sjlingdao">上级领导：</string>
    <string name="yijian">意&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;见：</string>
    <string name="notdo">待管理员审核</string>
    <string name="admindo">待领导审核</string>
    <string name="leaderdo">待上级领导审核</string>
    <string name="aleaderdo">上级领导审核</string>
    <string name="allreported">已办结</string>
    <string name="reportDate">上报日期：&#160;&#160;&#160;&#160;</string>
    <string name="restartsocket">网络波动，连接超时！已重连。请重新发送！</string>
    <string name="typesolopeid">边坡编号：</string>
    <string name="typesfid">三防编号：</string>
    <string name="typewfid">危房编号：</string>
    <string name="typedxid">地陷编号：</string>
    <string name="typegdid">工地编号：</string>
    <string name="typehdid">河道编号：</string>
    //边坡
    <string name="danger1">表面出现较大裂缝</string>
    <string name="danger2">坡体出现局部位移</string>
    <string name="danger3">土壤含水显著上升</string>
    <string name="danger4">表面植被严重破坏</string>
    //三防
    <string name="danger5">低洼地块</string>
    <string name="danger6">排水不畅</string>
    <string name="danger7">积水</string>
    <string name="danger8">没有排水渠</string>
    //地陷
    <string name="danger9">地面裂缝</string>
    <string name="danger10">地表下沉</string>
    <string name="danger11">排水管破损，土体掏空</string>
    <string name="danger12">地下空洞</string>
    //工地
    <string name="danger13">裸露土地未覆盖、未湿法施工</string>
    <string name="danger14">围挡未全封闭</string>
    <string name="danger15">无自动冲洗装置</string>
    <string name="danger16">扬尘TSP监测设备未运作</string>
    //河道
    <string name="danger17">排水口存在污水，臭水排出</string>
    <string name="danger18">河岸周围有少量生活垃圾</string>
    <string name="danger19">河面有漂浮物</string>
    <string name="danger20">河面浑浊</string>
    //危房
    <string name="danger21">发放通知书</string>
    <string name="danger22">张贴标识牌、拉警戒线</string>
    <string name="danger23">设置围挡</string>
    <string name="danger24">封存</string>

    <string name="manageftime">修改周期</string>
    <string name="titlew">地质监测点: %s \n传感器编号：%S \n传感器类型：%s</string>
    <string name="inner_navi">内置导航</string>
    <string name="baidu_navi">百度地图</string>
    <string name="gaode_navi">高德地图</string>
    <string name="no_navi">未安装地图百度，高德等地图app</string>

    <string name="time_1">30秒</string>
    <string name="time_2">1分钟</string>
    <string name="time_3">5分钟</string>
    <string name="time_4">10分钟</string>
    <string name="time_5">30分钟</string>
    <string name="time_6">1小时</string>
    <string name="time_7">5小时</string>
    <string name="time_8">10小时</string>
    <string name="time_9">24小时</string>
    <string name="shenbu">数值解读: \n导轮式测斜仪通过重力加速度传感器测量X/Y两个方向倾斜变化，计算得出测量点的倾斜方向与倾斜角度；用于观测山体边坡、土石坝、海边堤防以及建筑物基坑等土体内部的水平方向位移变化大小。当X或Y方向的变化角度大于警戒值时，表示土体内部已经产生位移，大面积滑坡的可能性极大，需要启动相关应急响应机制。\n
X和Y方向角度变化的正常值范围为：0到25度</string>
    <string name="shuiya">数值解读:孔隙水压计根据压力与水深成正比关系的静水压力原理，运用水压敏传感器测量不同地质层面的孔隙水压力或渗水压力。当传感器固定在水下某一测点时，该测点以上水柱压力高度加上该点高程，即可间接地测出水位高低，以观察测点处土壤的含水量。当孔隙水压值大于警戒值时，表示土壤的含水量已接近饱和，发生大面积滑坡的可能性较大，需要启动相关应急响应机制。\n
孔隙水压的正常值范围为：0到150KPa</string>
    <string name="biaomian">数值解读: \n  滑坡表面裂缝和位移计是由位移计本体、柔性芯钢丝、锚固头等组成。传感器原理为电感调频类，位移计本体内有一个圆柱形金属螺旋线圈，线圈内有一个可以移动的磁芯测杆，在实际应用中通过线圈的电感变化来观察测杆的位移。当测杆的位移大于警戒值时，表示坡体表面产生较大裂缝或者位移，后续出现滑坡的可能性较大，需要启动相关应急响应机制。\n
表面裂缝和位移的正常值范围为：0到70mm</string>
    <string name="consoles">应急对策</string>
    <string name="console_1">应急调查</string>
    <string name="console_2">危险性评估</string>
    <string name="console_3">启动突发性地质灾害应急预案</string>
    <string name="dangers">4级响应</string>
    <string name="danger_1">4级（蓝色）24小时内发灾可能较小</string>
    <string name="danger_2">3级（黄色）24小时内发灾可能性较大</string>
    <string name="danger_3">2级（橙色）24小时内发灾可能性大</string>
    <string name="danger_4">1级（红色）24小时内发灾可能性很大</string>
</resources>
