<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zig.slope.HisReportActivity"
    >
    <item
        android:id="@+id/report_data_menu"
        android:orderInCategory="100"
        android:icon="@drawable/ic_file_upload_black_24dp"
        android:title="@string/type_report"
        app:showAsAction="never" />

    <item
        android:id="@+id/change_imgs"
        android:title="@string/type_addimg"
        android:icon="@drawable/ic_camera_alt_black_24dp"
        android:orderInCategory="200"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/cam_data"
        android:title="@string/type_data"
        android:icon="@drawable/ic_router_black_24dp"
        android:orderInCategory="300"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/cam_video"
        android:title="@string/type_video"
        android:icon="@drawable/ic_switch_video_black_24dp"
        android:orderInCategory="400"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/do_process"
        android:orderInCategory="500"
        android:icon="@drawable/ic_all_inclusive_black_24dp"
        android:title="@string/type_process"
        app:showAsAction="never" />

    <item
        android:id="@+id/do_danger"
        android:orderInCategory="500"
        android:icon="@drawable/ic_sms_failed_black_24dp"
        android:title="@string/type_danager"
        app:showAsAction="never" />
</menu>
